@@ -25,7 +25,6 @@
 // Collaborating Class Headers --
 //-------------------------------
 #include "MsgLogger/MsgLogger.h"
-#include "psddl_psana/cspad2x2.ddl.h"
 
 //-----------------------------------------------------------------------
 // Local Macros, Typedefs, Structures, Unions and Forward Declarations --
@@ -80,7 +79,7 @@ CsPadPedestals::beginRun(Event& evt, Env& env)
   // provided in configuration. If there is more than one configuration 
   // object is found then complain and stop.
   
-  std::string src = configStr("source", "DetInfo()");
+  std::string src = configStr("source", "DetInfo(:Cspad)");
   int count = 0;
   
   // need to know segment mask which is availabale in configuration only
@@ -121,13 +120,19 @@ CsPadPedestals::beginRun(Event& evt, Env& env)
   }
 
   MsgLog(name(), info, "Found CsPad object with address " << m_src);
-  if (m_src.level() == Pds::Level::Source) {
-    const Pds::DetInfo& dinfo =static_cast<const Pds::DetInfo&>(m_src);
-    // see what data we should get
-    m_2x2 = dinfo.device() == Pds::DetInfo::Cspad2x2; 
-  } else {
-    MsgLog(name(), error, "Found object with address not at Source level. Terminating.");
+  if (m_src.level() != Pds::Level::Source) {
+    MsgLog(name(), error, "Found Cspad configuration object with address not at Source level. Terminating.");
     terminate();
+    return;
+  }
+
+  const Pds::DetInfo& dinfo = static_cast<const Pds::DetInfo&>(m_src);
+  // validate that this is indeed cspad, should always be true, but
+  // additional protection here should not hurt
+  if (dinfo.device() != Pds::DetInfo::Cspad) {
+    MsgLog(name(), error, "Found Cspad configuration object with invalid address. Terminating.");
+    terminate();
+    return;
   }
 }
 
@@ -137,62 +142,44 @@ void
 CsPadPedestals::event(Event& evt, Env& env)
 {
 
-  if (m_2x2) {
-    
-    // we should expect 2x2 data 
-    
-    shared_ptr<Psana::CsPad2x2::ElementV1> data1 = evt.get(m_src);
-    if (data1.get()) {
-  
-      ++ m_count;
-      
-      // process statistics for 2x2
-      const ndarray<int16_t, 3>& data = data1->data();
-      collectStat2x2(data.data());
-      
-    }
-    
-  } else {
-  
-    // we should get only regular cspad data
-    
-    shared_ptr<Psana::CsPad::DataV1> data1 = evt.get(m_src);
-    if (data1.get()) {
-  
-      ++ m_count;
-      
-      int nQuads = data1->quads_shape()[0];
-      for (int iq = 0; iq != nQuads; ++ iq) {
-        
-        // get quad object
-        const CsPad::ElementV1& quad = data1->quads(iq);
-  
-        // process statistics for this quad
-        const ndarray<int16_t, 3>& data = quad.data();
-        collectStat(quad.quad(), data.data());
-      }
-      
-    }
-    
-    shared_ptr<Psana::CsPad::DataV2> data2 = evt.get(m_src);
-    if (data2.get()) {
-  
-      ++ m_count;
-      
-      int nQuads = data2->quads_shape()[0];
-      for (int iq = 0; iq != nQuads; ++ iq) {
-        
-        // get quad object
-        const CsPad::ElementV2& quad = data2->quads(iq);
-  
-        // process statistics for this quad
-        const ndarray<int16_t, 3>& data = quad.data();
-        collectStat(quad.quad(), data.data());
-      }
-      
-    }
+  // we should get only regular cspad data
 
+  shared_ptr<Psana::CsPad::DataV1> data1 = evt.get(m_src);
+  if (data1.get()) {
+
+    ++ m_count;
+    
+    int nQuads = data1->quads_shape()[0];
+    for (int iq = 0; iq != nQuads; ++ iq) {
+      
+      // get quad object
+      const CsPad::ElementV1& quad = data1->quads(iq);
+
+      // process statistics for this quad
+      const ndarray<int16_t, 3>& data = quad.data();
+      collectStat(quad.quad(), data.data());
+    }
+    
   }
+  
+  shared_ptr<Psana::CsPad::DataV2> data2 = evt.get(m_src);
+  if (data2.get()) {
+
+    ++ m_count;
+    
+    int nQuads = data2->quads_shape()[0];
+    for (int iq = 0; iq != nQuads; ++ iq) {
+      
+      // get quad object
+      const CsPad::ElementV2& quad = data2->quads(iq);
+
+      // process statistics for this quad
+      const ndarray<int16_t, 3>& data = quad.data();
+      collectStat(quad.quad(), data.data());
+    }
+    
+  }
+
 }
 
 
@@ -204,88 +191,47 @@ CsPadPedestals::endJob(Event& evt, Env& env)
 
   MsgLog(name(), info, "collected total " << m_count << " events");
   
-  if (m_2x2) {
+  if (not m_pedFile.empty()) {
 
-    const double* sum = &m_sum[0][0][0][0];
-    const double* sum2 = &m_sum2[0][0][0][0];
-    const int size = NumColumns*NumRows*2;
-
-    if (not m_pedFile.empty()) {
-      
-      // save pedestals as average
-      std::ofstream out(m_pedFile.c_str());
-      for (int i = 0; i < size; ++ i) {
-        double avg = m_count ? sum[i] / m_count : 0;
-        out << avg << '\n';
-      }
-      
-      out.close();
-      
-    }
-  
-    if (not m_noiseFile.empty()) {
-      
-      // save pedestals as average
-      std::ofstream out(m_noiseFile.c_str());
-      for (int i = 0; i < size; ++ i) {
-        double stdev = 0;
-        if (m_count > 1) {
-          double avg = sum[i] / m_count;
-          stdev = std::sqrt(sum2[i] / m_count - avg*avg);              
+    // save pedestals as average
+    std::ofstream out(m_pedFile.c_str());
+    for (int iq = 0; iq != MaxQuads; ++ iq) {
+      for (int is = 0; is != MaxSectors; ++ is) {
+        for (int ic = 0; ic != NumColumns; ++ ic) {
+          for (int ir = 0; ir != NumRows; ++ ir) {
+            double avg = m_count ? m_sum[iq][is][ic][ir] / m_count : 0;
+            out << avg << ' ';
+          }
+          out << '\n';
         }
-        out << stdev << '\n';
       }
-      
-      out.close();
-      
     }
 
+    out.close();
 
-  } else {
+  }
+
+  if (not m_noiseFile.empty()) {
     
-    if (not m_pedFile.empty()) {
-      
-      // save pedestals as average
-      std::ofstream out(m_pedFile.c_str());
-      for (int iq = 0; iq != MaxQuads; ++ iq) {
-        for (int is = 0; is != MaxSectors; ++ is) {
-          for (int ic = 0; ic != NumColumns; ++ ic) {
-            for (int ir = 0; ir != NumRows; ++ ir) {
-              double avg = m_count ? m_sum[iq][is][ic][ir] / m_count : 0;
-              out << avg << ' ';
+    // save pedestals as average
+    std::ofstream out(m_noiseFile.c_str());
+    for (int iq = 0; iq != MaxQuads; ++ iq) {
+      for (int is = 0; is != MaxSectors; ++ is) {
+        for (int ic = 0; ic != NumColumns; ++ ic) {
+          for (int ir = 0; ir != NumRows; ++ ir) {
+            double stdev = 0;
+            if (m_count > 1) {
+              double avg = m_sum[iq][is][ic][ir] / m_count;
+              stdev = std::sqrt(m_sum2[iq][is][ic][ir] / m_count - avg*avg);
             }
-            out << '\n';
+            out << stdev << ' ';
           }
+          out << '\n';
         }
       }
-      
-      out.close();
-      
     }
-  
-    if (not m_noiseFile.empty()) {
-      
-      // save pedestals as average
-      std::ofstream out(m_noiseFile.c_str());
-      for (int iq = 0; iq != MaxQuads; ++ iq) {
-        for (int is = 0; is != MaxSectors; ++ is) {
-          for (int ic = 0; ic != NumColumns; ++ ic) {
-            for (int ir = 0; ir != NumRows; ++ ir) {
-              double stdev = 0;
-              if (m_count > 1) {
-                double avg = m_sum[iq][is][ic][ir] / m_count;
-                stdev = std::sqrt(m_sum2[iq][is][ic][ir] / m_count - avg*avg);              
-              }
-              out << stdev << ' ';
-            }
-            out << '\n';
-          }
-        }
-      }
-      
-      out.close();
-      
-    }
+
+    out.close();
 
   }
 }
@@ -316,22 +262,6 @@ CsPadPedestals::collectStat(unsigned qNum, const int16_t* data)
       ++seg;
     }
   }
-
-}
-
-/// collect statistics for 2x2
-void 
-CsPadPedestals::collectStat2x2(const int16_t* data)
-{
-  double* sum = &m_sum[0][0][0][0];
-  double* sum2 = &m_sum2[0][0][0][0];
-  const int size = NumColumns*NumRows*2;
-  
-  for (int i = 0; i < size; ++ i) {
-    double val = data[i];
-    sum[i] += val;
-    sum2[i] += val*val;
-  }          
 
 }
 
